Feature Update for Version 2409_RC

--- a/about.html
+++ b/about.html
@@ -62,8 +62,7 @@
     </header>
 
 
-    <section class="breadcrumb-area bg-img bg-overlay"
-        style="background-image: url(img/bg-img/hero-bg-small.png);">
+    <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/hero-bg-small.png);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -82,7 +81,7 @@
         </div>
     </section>
 
-
+    <!-- Summary -->
     <section class="about-me-summ section-padding-80-0 clearfix">
         <div class="container">
             <div class="row">
@@ -91,7 +90,6 @@
                         <h2 style="font-size: 36px">Summary</h2>
                     </div>
                 </div>
-
             </div>
             <div class="row">
                 <div class="col-md-6 col-lg-4 box-indiv">
@@ -105,7 +103,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4 box-indiv">
-                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-earth-asia"></i>
                         </div>
@@ -115,7 +113,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4 box-indiv">
-                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="700ms">
+                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-circle-user"></i>
                         </div>
@@ -125,7 +123,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4 box-indiv">
-                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="900ms">
+                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-user-graduate"></i>
                         </div>
@@ -135,7 +133,7 @@
                 </div>
 
                 <div class="col-md-8 col-lg-8 box-indiv">
-                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="900ms">
+                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-user-graduate"></i>
                         </div>
@@ -144,11 +142,11 @@
                     </div>
                 </div>
             </div>
-            </div>
+        </div>
         </div>
     </section>
 
-
+    <!-- Timelines -->
     <section class="about-me-area bg-gray section-padding-80-0 clearfix">
         <div class="container">
             <div class="row">
@@ -158,6 +156,7 @@
                     </div>
                 </div>
 
+                <!-- Education -->
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
                         <h1 style="text-align: left; margin-bottom: -45px;"><u>Education</u></h2>
@@ -166,7 +165,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
                         <div class="period-date-edu">
                             2019 - 2022
                         </div>
@@ -188,7 +187,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="700ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
                         <div class="period-date-edu">
                             2013 - 2016
                         </div>
@@ -199,7 +198,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
                         <div class="period-date-edu">
                             2007 - 2012
                         </div>
@@ -211,14 +210,12 @@
             </div>
 
 
-
-
-
-
+            <!-- Awards & Achievements -->
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
-                        <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em;"><u>Awards & Achievements</u></h2>
+                        <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em;"><u>Awards &
+                                Achievements</u></h2>
                     </div>
                 </div>
             </div>
@@ -236,7 +233,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="period-date-aa">
                             2019
                         </div>
@@ -251,7 +248,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="700ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="period-date-aa">
                             2018
                         </div>
@@ -267,7 +264,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="period-date-aa">
                             2017
                         </div>
@@ -282,9 +279,7 @@
             </div>
 
 
-
-
-
+            <!-- Experiences -->
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
@@ -308,7 +303,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="period-date-exp">
                             Oct 2021 - Feb 2022
                         </div>
@@ -320,7 +315,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="700ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="period-date-exp">
                             Mar 2021 - Aug 2021
                         </div>
@@ -332,7 +327,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="period-date-exp">
                             Jan 2019 - Feb 2019
                         </div>
@@ -357,7 +352,7 @@
                 </div>
             </div>
 
-            <div class="skill-ara wow fadeInUp" data-wow-delay="100ms">
+            <div class="skill-ara wow fadeInUp" data-wow-delay="300ms">
                 <div class="skill">
                     <div class="single-skill">
                         <div class="progress-count">
@@ -386,13 +381,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
+                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="500ms">
                         <h2>Programming Languages</h2>
                     </div>
                 </div>
             </div>
 
-            <div class="skill-ara wow fadeInUp" data-wow-delay="100ms">
+            <div class="skill-ara wow fadeInUp" data-wow-delay="700ms">
                 <div class="skill">
                     <div class="single-skill">
                         <div class="progress-count">
@@ -444,10 +439,14 @@
                         </div>
 
                         <div class="social-info">
-                            <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
-                            <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
-                            <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
-                            <a href="https://www.instagram.com/nrfz._/"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
+                            <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github"
+                                    aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter"
+                                    aria-hidden="true"></i></a>
+                            <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook"
+                                    aria-hidden="true"></i></a>
+                            <a href="https://www.instagram.com/nrfz._/"><i class="fa-brands fa-instagram"
+                                    aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
@@ -455,9 +454,8 @@
         </div>
     </footer>
 
-    <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom"
-        data-bg="#f2f3e5" data-fg="#000" data-font-family="Poppins, sans-serif"
-        data-zindex="12345111111"
+    <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
+        data-fg="#000" data-font-family="Poppins, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
