--- a/index.html
+++ b/index.html
@@ -325,27 +325,27 @@
         <div class="instragram-feed-area owl-carousel wow fadeInUp" data-wow-delay="300ms">
 
             <div class="single-software-item">
-                <img src="img/gallery/brand1.png" alt>
+                <img src="img/gallery/brand1.png" alt="inkscape">
             </div>
 
             <div class="single-software-item">
-                <img src="img/gallery/brand2.png" alt>
+                <img src="img/gallery/brand2.png" alt="sketchup">
             </div>
 
             <div class="single-software-item">
-                <img src="img/gallery/brand3.png" alt>
+                <img src="img/gallery/brand3.png" alt="illustrator">
             </div>
 
             <div class="single-software-item">
-                <img src="img/gallery/brand4.png" alt>
+                <img src="img/gallery/brand4.png" alt="xd">
             </div>
 
             <div class="single-software-item">
-                <img src="img/gallery/brand5.png" alt>
+                <img src="img/gallery/brand5.png" alt="office-365">
             </div>
 
             <div class="single-software-item">
-                <img src="img/gallery/brand6.png" alt>
+                <img src="img/gallery/brand6.png" alt="windows">
             </div>
         </div>
 
