Feature Update for Version 2409_RC

--- a/blog.html
+++ b/blog.html
@@ -80,7 +80,7 @@
     </section>
 
 
-    <div class="pw-blog-area section-padding-80-0 mb-70">
+    <div class="pw-blog-area section-padding-80-0">
         <div class="container">
             <div class="row">
 
