--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                             alt="profile-pic">
                         <div class="profile-det wow fadeInUp" data-wow-delay="200ms">
                             <h2 class="profile-name wow fadeInUp" data-wow-delay="400ms">Nurafian Zulkifli</h2>
-                            <h2 class="profile-desc wow fadeInUp" data-wow-delay="400ms">Passionate About UI/UX, and
-                                Everything Else Design
+                            <h2 class="profile-desc wow fadeInUp" data-wow-delay="400ms">Passionate about UI/UX, and
+                                everything else Design
                             </h2>
                         </div>
 
