Feature Update for Version 2409_RC

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>NRFZ | Home</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+    <meta property="og:image" content="https://i.imgur.com/91cXZ6W.png" />
 
     <link rel="icon" href="./img/core-img/favicon.png">
 
