--- a/worksbynrfz/ezlink-red.html
+++ b/worksbynrfz/ezlink-red.html
@@ -8,7 +8,7 @@
   <title>EZ-Link Card Redesign</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-  <meta property="og:image" content="https://i.imgur.com/7vAfn5f.png"/>
+  <meta property="og:image" content="https://i.imgur.com/91cXZ6W.png" />
 
   <!-- Favicons -->
   <link href="../assets/img/favicon.png" rel="icon">
