--- a/worksbynrfz/food-rev-flash-app.html
+++ b/worksbynrfz/food-rev-flash-app.html
@@ -8,8 +8,8 @@
   <title>Food Review Compiler/Flashify - a Flashcard App</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-  <meta property="og:image" content="https://i.imgur.com/7vAfn5f.png"/>
-
+  <meta property="og:image" content="https://i.imgur.com/91cXZ6W.png" />
+  
   <!-- Favicons -->
   <link href="../assets/img/favicon.png" rel="icon">
   <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
