Feature Update for Version 2409_RC

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
     <link rel="icon" href="./img/core-img/favicon.png">
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style-extension-1.css">
@@ -89,14 +89,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 sect-title">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
+                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
                         <h2 style="font-size: 36px">Summary</h2>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 col-lg-4 box-indiv">
-                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-cake-candles"></i>
                         </div>
@@ -116,7 +116,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4 box-indiv">
-                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-circle-user"></i>
                         </div>
@@ -126,7 +126,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4 box-indiv">
-                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-user-graduate"></i>
                         </div>
@@ -154,21 +154,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
+                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
                         <h2 style="font-size: 36px">Timelines</h2>
                     </div>
                 </div>
 
                 <!-- Education -->
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
+                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
                         <h1 style="text-align: left; margin-bottom: -45px;"><u>Education</u></h2>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="period-date-edu">
                             2019 - 2022
                         </div>
@@ -179,7 +179,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="period-date-edu">
                             2017 - 2018
                         </div>
@@ -201,7 +201,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="period-date-edu">
                             2007 - 2012
                         </div>
@@ -216,7 +216,7 @@
             <!-- Awards & Achievements -->
             <div class="row">
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
+                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
                         <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em;"><u>Awards &
                                 Achievements</u></h2>
                     </div>
@@ -224,7 +224,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="period-date-aa">
                             2023
                         </div>
@@ -251,7 +251,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
                         <div class="period-date-aa">
                             2018
                         </div>
@@ -267,7 +267,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="period-date-aa">
                             2017
                         </div>
@@ -285,14 +285,14 @@
             <!-- Experiences -->
             <div class="row">
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
+                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
                         <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em;"><u>Experiences</u></h2>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="period-date-exp">
                             Dec 2022 - Jul 2024
                         </div>
@@ -318,7 +318,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
                         <div class="period-date-exp">
                             Mar 2021 - Aug 2021
                         </div>
@@ -330,7 +330,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="period-date-exp">
                             Jan 2019 - Feb 2019
                         </div>
