--- a/gallery.html
+++ b/gallery.html
@@ -116,7 +116,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/r0gIlFD.png" alt="bp12-nws">
                         <div class="hover-content">
@@ -129,7 +129,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/0CvilmH.png" alt="bus-pids">
                         <div class="hover-content">
@@ -142,7 +142,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="700ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/69edjaV.png" alt="bus-stop-pole">
                         <div class="hover-content">
@@ -155,7 +155,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="300ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/6oNoqnp.png" alt="man-a22-mascot">
                         <div class="hover-content">
@@ -168,7 +168,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item md mb-30 wow fadeInUp" data-wow-delay="500ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item md mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/03mFKk0.png" alt="myts-app">
                         <div class="hover-content">
@@ -182,7 +182,7 @@
                 </div>
 
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="700ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/FC4fSsG.png" alt="bus-rep">
                         <div class="hover-content">
@@ -196,7 +196,7 @@
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video id mb-30 wow fadeInUp"
-                    data-wow-delay="100ms">
+                    data-wow-delay="700ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/kstN8gT.png" alt="time-tree">
                         <div class="hover-content">
@@ -209,7 +209,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wd mb-30 wow fadeInUp" data-wow-delay="300ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wd mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/snXfU8d.png" alt="tdc-v2">
                         <div class="hover-content">
@@ -222,7 +222,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/7e69TyC.png" alt="more-rep">
                         <div class="hover-content">
@@ -235,7 +235,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="700ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/9ynFmuE.png" alt="mrt-sign-s1">
                         <div class="hover-content">
@@ -261,22 +261,83 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp"
-                data-wow-delay="700ms">
-                <div class="single-portfolio-content">
-                    <img src="https://i.imgur.com/4DBfqCK.png" alt="hydration-reg">
-                    <div class="hover-content">
-                        <h4>Hydration Regime Infographic</h4>
-                        <a class="info" href="worksbynrfz/hydrationreg.html" class="portfolio-img"><i
-                                class="fa-solid fa-circle-info"></i></a>
-                        <a href="https://i.imgur.com/4DBfqCK.png" class="portfolio-img"><i
-                                class="fa-solid fa-magnifying-glass-plus"></i></a>
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/4DBfqCK.png" alt="hydration-reg">
+                        <div class="hover-content">
+                            <h4>Hydration Regime Infographic</h4>
+                            <a class="info" href="worksbynrfz/hydrationreg.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/4DBfqCK.png" class="portfolio-img"><i
+                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                        </div>
                     </div>
                 </div>
-            </div>
 
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/fepgW5P.png" alt="hydration-reg">
+                        <div class="hover-content">
+                            <h4>EZ-Link Card Redesign</h4>
+                            <a class="info" href="worksbynrfz/ezlink-red.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/fepgW5P.png" class="portfolio-img"><i
+                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item md mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/5uss3c8.png" alt="hydration-reg">
+                        <div class="hover-content">
+                            <h4>Food Review Compiler/Flashify - a Flashcard App</h4>
+                            <a class="info" href="worksbynrfz/food-rev-flash-app.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/5uss3c8.png" class="portfolio-img"><i
+                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ld mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/3dYLGoP.png" alt="hydration-reg">
+                        <div class="hover-content">
+                            <h4>Friends Forever Logo Design</h4>
+                            <a class="info" href="worksbynrfz/ffl.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/3dYLGoP.png" class="portfolio-img"><i
+                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/b29Wusf.png" alt="hydration-reg">
+                        <div class="hover-content">
+                            <h4>Infographic Resume</h4>
+                            <a class="info" href="worksbynrfz/igra1.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/b29Wusf.png" class="portfolio-img"><i
+                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/ZGhtKD7.png" alt="hydration-reg">
+                        <div class="hover-content">
+                            <h4>COVID-19 Shopping Habits Infographic</h4>
+                            <a class="info" href="worksbynrfz/igra2.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/ZGhtKD7.png" class="portfolio-img"><i
+                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
