--- a/worksbynrfz/TRANSFER.html
+++ b/worksbynrfz/TRANSFER.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Hydration Regime Infographic | WBN</title>
+  <title>COVID-19 Shopping Habits Infographic | WBN</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta property="og:image" content="https://i.imgur.com/91cXZ6W.png" />
@@ -68,7 +68,7 @@
   </header>
 
 
-  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/4DBfqCK.png)">
+  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/5uss3c8.png)">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
@@ -81,7 +81,7 @@
                 </li>
               </ol>
             </nav>
-            <h2 class="page-title">Hydration Regime Infographic</h2>
+            <h2 class="page-title">COVID-19 Shopping Habits Infographic</h2>
           </div>
         </div>
       </div>
@@ -98,7 +98,8 @@
               <i class="fa-solid fa-pen-to-square"></i>
             </div>
             <h3 style="font-size: 20px; font-weight: bolder;">Project Description</h3>
-            <h4 style="font-size: 15px; font-weight: normal;"> A remake of SAF's Hydration Regime Infographic.
+            <h4 style="font-size: 15px; font-weight: normal;"> A submission for an assignment to produce an actual
+              Infographic, based on a given topic.
           </div>
         </div>
 
@@ -118,20 +119,20 @@
               <i class="fa-solid fa-calendar-days"></i>
             </div>
             <h3 style="font-size: 20px; font-weight: bolder;">Project Year</h3>
-            <h4 style="font-size: 15px; font-weight: normal;">2022</h4>
+            <h4 style="font-size: 15px; font-weight: normal;">2021</h4>
           </div>
         </div>
       </div>
     </div>
 
     <!-- Button Provision -->
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
         <a href="https://nurafianzulkifli.github.io/train-delays-checker-v2/" class="btn pw-btn btn-2 mt-15"
           target="_blank">
           <i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp;Train Delays Checker V2</a>
       </div>
-    </div>
+    </div> -->
     </div>
   </section>
 
@@ -143,22 +144,9 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="https://i.imgur.com/NpCq4Pj.png" alt="ywt-train-sched">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="https://i.imgur.com/CQby9Uz.png" alt="exit-dir-1">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="https://i.imgur.com/3M5vRTH.png" alt="ccl-guide">
+              <img src="https://i.imgur.com/lkWD0vn.png" alt="infographic-covid19">
             </div>
           </div>
-
-          <div class="swiper-slide">
-            <img src="https://i.imgur.com/29IkkeQ.png" alt="exit-dir-2">
-          </div>
-        </div>
           <div class="swiper-pagination"></div>
         </div>
       </div>
