--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -68,7 +68,7 @@
   </header>
 
 
-  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/ZD7LFlS.png)">
+  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/snXfU8d.png)">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
@@ -151,7 +151,7 @@
             </div>
 
             <div class="swiper-slide">
-              <img src="https://i.imgur.com/ZD7LFlS.png" alt="tdc-data">
+              <img src="https://i.imgur.com/9nzyCqW.png" alt="tdc-data">
             </div>
           </div>
           <div class="swiper-pagination"></div>
