--- a/worksbynrfz/mrt-signage-rep-s1.html
+++ b/worksbynrfz/mrt-signage-rep-s1.html
@@ -149,7 +149,7 @@
             </div>
 
             <div class="swiper-slide">
-              <img src="https://i.imgur.com/hmfKpYk.png" alt="jur-plat-a">
+              <img src="https://i.imgur.com/lAywSdY.png" alt="jur-plat-a">
             </div>
 
             <div class="swiper-slide">
